--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Frank van Wijk <fvanwijk@xebia.com>",
   "private": true,
   "scripts": {
+    "server": "nodemon server/index.js",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -13,6 +14,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "express": "4.16.2",
+    "node-tradfri-client": "0.7.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
@@ -47,6 +50,7 @@
     "jest": "^22.0.4",
     "jest-serializer-vue": "^0.3.0",
     "node-notifier": "^5.1.2",
+    "nodemon": "1.14.12",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
