--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "date-fns": "1.29.0",
     "express": "4.16.2",
     "node-tradfri-client": "0.7.0",
     "vue": "^2.5.2",
