--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "date-fns": "1.29.0",
     "express": "4.16.2",
     "node-tradfri-client": "0.7.0",
+    "sockjs": "0.3.19",
+    "sockjs-client": "1.1.4",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
